moving TopHits and aggregation test to use pooled SearchHits